--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <script>
         (function() {
             console.log(GST.getTotal("287.255"));
+            console.log(GST.getSubtotal("500.46"));
         })();
     </script>
 </body>
