--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,7 @@
     <script src="gst.js"></script>
     <script>
         (function() {
-            console.log(GST.getTotal("287.255"));
-            console.log(GST.getSubtotal("500.46"));
+            console.log(GST.getTotal());
         })();
     </script>
 </body>
