--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,15 @@
     <script src="gst.js"></script>
     <script>
         (function() {
-            console.log(GST.getTotal());
+            GST.gstPercent = 0.2;
+            
+            var tot = GST.getTotal(10);
+
+            console.log(tot);
+
+            var gst = GST.getGST(12, 10);
+
+            console.log(gst);
         })();
     </script>
 </body>
