Conversion to literal Object declarations

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
         (function() {
             var gst = GST;
 
+            gst.percent = 0.3;
+
             console.log(gst.getTotal(10));
         })();
     </script>
