simplified and removed the .round() method in favour of the built in toFixed() method

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,7 @@
         (function() {
             var gst = GST;
 
-            gst.percent = 0.3;
-
-            console.log(gst.getTotal(10));
+            console.log(gst.getGST(10, 8.7));
         })();
     </script>
 </body>
