--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <script src="../dist/gst.min.js"></script>
     <script>
         (function() {
-            let gst = new GST;
+            let gst = new GST();
 
             console.log(gst.getPercent(50, 45));
         })();
