--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <header class="inner">
         <h1>GST.JS</h1>
         <p>A Simple Vanilla Javascript Plugin for calculating GST.</p>
-        <a class="button-green">Download Now</a>
+        <!-- <a class="button-green">Download Now</a> -->
         <a href="https://github.com/forrest-wilson/gstjs" target="_blank" class="button-green">View on Github</a>
     </header>
 
